# GamerSaver

./: .gitignore  GamerSaver.code-workspace  GamerSaver.pro  README.md  meson.build
include/: game.h  mainwindow.h  oauth.h
res/: DefaultGameList.ini  GameList.ini  credentials.json  resources.qrc  response.html  style.css
source/: compile_commands.json  meson.build
source/src/: game.cpp  game.h  mainwindow.cpp  mainwindow.h  networkmanager.h
src/: appmanifest.cpp  appmanifest.h  compile_commands.json  game.cpp  game.h  googleoauth.cpp  googleoauth.h  gsoauth.cpp  gsoauth.h  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  networkmanager.cpp  networkmanager.h  oauth.cpp  oauth.h  oauthloopbackserver.cpp  oauthloopbackserver.h  oauthnetaccess.cpp  oauthnetaccess.h  resources.qrc  style.css
src/OAuth/: oauth.cpp  oauth.h  oauthloopbackserver.cpp  oauthloopbackserver.h  oauthnetaccess.cpp  oauthnetaccess.h
src/OAuth/Google/: googleoauth.cpp  googleoauth.h
src/res/: DefaultGameList.ini
test/: gstest.cpp  gstest.h  meson.build  oauthtest.cpp  oauthtest.h  testresults.h
test/OAuth/: test_populategoogleendpoints.cpp
